# ITA_backend

./: .env-example  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
src/studio/: Dockerfile  pyproject.toml
src/studio/app/: api.py
src/studio/app/constants/: config.py
src/studio/app/crud/: answer_crud.py  audio_crud.py  auth_crud.py  cv_crud.py  generation_crud.py  image_crud.py  interview_session_crud.py  jd_crud.py  question_crud.py  text_crud.py  user_crud.py  video_crud.py
src/studio/app/db/: database.py
src/studio/app/models/: answer_model.py  audio_model.py  cv_model.py  generation_model.py  image_model.py  interview_session_model.py  jd_model.py  question_model.py  text_model.py  user_model.py  video_model.py
src/studio/app/routers/: answer_router.py  audio_router.py  auth_router.py  cv_router.py  generation_router.py  image_router.py  interview_session_router.py  jd_router.py  question_router.py  s3_router.py  text_router.py  user_router.py  video_router.py
src/studio/app/schemas/: answer_schema.py  audio_schema.py  cv_schema.py  generation_schema.py  image_schema.py  interview_session_schema.py  jd_schema.py  mlp_avatargeneration_schema.py  mlp_questiongeneration_schema.py  question_schema.py  text_schema.py  user_schema.py  video_schema.py
src/studio/app/services/: validate_data.py
src/studio/app/utils/: answer_analysis_utils.py  avatar_generation_utils.py  handle_file.py  mlp_api.py  s3_client.py  (+1 more)
src/studio/dummyData/: handle_return_mlp_avatargeneration.py  handle_send_question_generation.py
(+2 files in other folders)
